<resources>
    <string name="app_name">Privacy Personas</string>
    <string name="app_show_name">Privacy Personas</string>
    <string name="backend_address">ppa2.tk.informatik.tu-darmstadt.de</string>
    <string name="home_frag1_title">@string/app_show_name</string>
    <string name="home_frag2_title">Consent Form</string>
    <string name="home_frag3_title">Decisions</string>
    <string name="home_frag5_title">Shared Preferences</string>
    <string name="main_sharedpref_name">ppa_sp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="initial_thank_you">Thank you for participating in our study. To make sure that we can reimburse you for participation, we need your Prolific ID. \n\nPlease enter the ID to the text field below:</string>
    <string name="id_enter_continue_button_text">Continue</string>
    <string name="cf_ab_title">Consent Form</string>
    <string name="consent_form_section_header_0">You are invited to participate in the online study “perceptions of IoT devices” initiated and conducted by Karola Marky, M. Sc. The research is supervised by Prof. Dr. Max Mühlhäuser at Technical University of Darmstadt, Germany. The guidelines of the German Research Foundation (DFG) stipulate that the participants in empirical studies explicitly and comprehensibly agree with their signature that they voluntarily participate in our research. For this reason, we would like to ask you to read the following explanations on the content of the study and to sign the consent form below if you agree. If you have any questions or complaints about the process of this research study or your rights as a human research subject, please contact Karola Marky (E-Mail: karola.marky@tu-darmstadt.de). This study examines information privacy. In this study, you fill out questionnaires about information privacy. The data collected will be evaluated for scientific purposes.
\n\n</string>
    <string name="consent_form_section_header_1">1. Purpose and Goal of this Research \n</string>
    <string name="consent_form_section_header_2">2. Data Protection \n</string>
    <string name="consent_form_section_header_3">3. Confidentiality and Data Storage \n</string>
    <string name="consent_form_section_header_4">4. Voluntariness &amp; rights of the participants \n</string>
    <string name="consent_form_section_header_5">5. Procedure \n</string>
    <string name="consent_form_section_header_6">6. Identification of Investigators \n</string>
    <string name="consent_form_section_0">As a participant in this study, you are not exposed to any risk beyond the risks of everyday life. Further, you may terminate participation in the study at any time without giving any reason and without any disadvantages. In the event of termination, all data collected up to that point will be deleted.
\n\n
        Please note:
        \n\n
• Your participation is entirely voluntary. \n
• The duration of the online survey as well as the compensation is according to the information provided at the Prolific website. \n
\n\n</string>
    <string name="consent_form_section_1">The purpose of this research is to study “perceptions of IoT devices”. It is part of a research project of the research group of Telecooperation at Technical University of Darmstadt, Germany with the goal to investigate user perceptions of IoT devices in your surroundings. Your participation will help us to achieve this goal. The results of this research project may be presented at scientific or professional meetings or published in scientific proceedings and journals.
\n\n</string>
    <string name="consent_form_section_2">The data processing of this study is carried out in accordance with the data protection provisions of the General Data Protection Regulation (GDPR) and the Hessian Data Protection and Freedom of Information Act (HDSIG). The data will be used exclusively for the purposes described in this information text (see above in Section 1). \n\n
• The following general data is collected within the scope of this study: questionnaire responses. \n
• The following personal data is collected: Age, gender, educational level, occupation.
\n\n</string>
    <string name="consent_form_section_3">All data collected within the scope of this study are confidential and will only be used anonymously. Demographic data, such as age or gender, do not allow a clear conclusion to be drawn about your person. We will never ask you to give your name or any other unambiguous information at any time during the respective study. The data collected with this study will be stored at the Department of Telecooperation at the Technical University of Darmstadt (Germany) and the survey provider (https://www.soscisurvey.de/). The data will be deleted after 10 years at the latest by the project partners and 94 days after closing the survey from the survey provider. Faculty and administrators from the campus will not have access to raw data or transcripts. This precaution will prevent your individual comments from having any negative repercussions. Despite careful control of content, the researchers assume no liability for damages, which directly or indirectly result from the use of the survey provider. Any recordings cannot be viewed by anyone outside this research project unless we have you sign a separate permission form allowing us to use them. The records will be destroyed after the end of the research, as required by the funding organization or if you contact the researcher to destroy or delete them immediately. As with any publication or online related activity, the risk of a breach of privacy is always possible. According to the GDPR, the researchers will inform the participant if a breach of confidential data was detected.
\n\n</string>
    <string name="consent_form_section_4">
        Your participation in this investigation is voluntary. You are free to cancel your participation at any time during this study and thus withdraw your consent (revocation), without this resulting in any disadvantages for you besides not receiving the compensation detailed on the Prolific website. If you cancel your participation, no data from you will be stored and all existing personal data will be destroyed. You have the right to obtain information about the personal data concerning you and, if necessary, to demand its correction or deletion.
\n\n
    </string>
    <string name="consent_form_section_5">
        After confirming your informed consent you will: \n
1. receive a set of questionnaires and notifications that ask you to fulfill a specific task over a period of 2 weeks \n
2. receive a demographics questionnaire.
\n\n
    </string>
    <string name="consent_form_section_6">
        If you have any questions or concerns about the research, please feel free to contact: \n\n
    </string>
    <string name="contact1">Dr. Karola Marky \n
Researcher \n
Technical University of Darmstadt \n
Hochschulstr. 10 \n
64289 Darmstadt, Germany \n</string>
    <string name="contact2">Prof. Dr. Max Mühlhäuser \n
Professor/Head of Department \n
Technical University of Darmstadt \n
Hochschulstr. 10 \n
64289 Darmstadt, Germany \n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consent_form_read_button_text">Proceed to the study</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="gender_question">With which gender do you identify most?</string>
    <string name="age_question">How old are you?</string>
    <string name="age_st1">I am</string>
    <string name="age_st2">years old.</string>
    <string name="country_question">In which country do you reside?</string>
    <string name="employment_question_text">What describes your current employment status best?</string>
    <string name="internet_question_text">How often do you use the Internet?</string>
    <string name="election_question_text">Have you already participated in an online election?</string>
    <string name="participation_question_text">If your country would offer online voting for political elections would you participate?</string>
    <string name="pqe_text">Please explain your answer...</string>
    <string-array name="likert_questions">
        <item name="lq1">I like to occupy myself in greater detail with technical systems.</item>
        <item name="lq2">I like testing the functions of new technical systems.</item>
        <item name="lq3">I predominantly deal with technical systems because I have to.</item>
        <item name="lq4">When I have a new technical system in front of me, I try it out intensively.</item>
        <item name="lq5">I enjoy spending time becoming acquainted with a new technical system.</item>
        <item name="lq6">It is enough for me that a technical system works; I don’t care how or why.</item>
        <item name="lq7">I try to understand how a technical system exactly works.</item>
        <item name="lq8">It is enough for me to know the basic functions of a technical system.</item>
        <item name="lq9">I try to make full use of the capabilities of a technical system.</item>
    </string-array>
    <string-array name="persona_questions">
        <item>I am highly motivated to protect my information privacy.</item>
        <item>I know how to protect my information privacy.</item>
        <item>My own privacy is very important to me.</item>
        <item>I\'m concerned that online companies are collecting too much personal information about me.</item>
        <item>It is very important to me that I am aware and knowledgeable about how my personal information will be used.</item>
        <item>I often procrastinate when it comes to making important decisions.</item>
        <item>I generally make important decisions at the last minute.</item>
        <item>I make quick decisions.</item>
        <item>I am often interested in articles about security threats.</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="intro_finish_button_text">Done</string>
    <string name="consent_form_read_text">I’ve read and understood the consent form</string>
    <string name="gq_option1">female</string>
    <string name="gq_option2">male</string>
    <string name="gq_option3">other</string>
    <string name="gq_option4">prefer not to say</string>
    <string name="eq_option1">Full-time employed</string>
    <string name="eq_option2">Part-time employed</string>
    <string name="eq_option3">Unemployed and in search</string>
    <string name="eq_option4">Unemployed and not in search</string>
    <string name="eq_option5">Student</string>
    <string name="eq_option6">Retired</string>
    <string name="eq_option7">House man / wife</string>
    <string name="eq_option8">Self-employed</string>
    <string name="eq_option9">Unfit for work</string>
    <string name="eq_option10">Other</string>
    <string name="eq_option11">No indication</string>
    <string name="iq_option1">Daily</string>
    <string name="iq_option2">Every other day</string>
    <string name="iq_option3">Once a week</string>
    <string name="iq_option4">Less than once a week</string>
    <string name="yesno_yes">Yes</string>
    <string name="yesno_no">No</string>
    <string name="gender_custom_hint">Your gender...</string>
    <string name="country_custom_hint">Your country...</string>
    <string name="empl_custom_hint">Your employment...</string>
    <string name="iot_question_text">Have you heard about the so-called “Internet of Things” (IoT)?</string>
    <string name="how_iot_question_hint">How have you heard about the IoT?</string>
    <string name="to_iot_section_button_text">More about IoT</string>
</resources>