<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PersonQuestionsFragment">

        <ScrollView
            style="@style/GeneralPaddingBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_color">

            <LinearLayout
                android:id="@+id/linLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    style="@style/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/genderQuestion"
                            style="@style/SmallHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender_question" />

                        <RadioGroup
                            android:id="@+id/gqRadioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/gqR1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gq_option1" />

                            <RadioButton
                                android:id="@+id/gqR2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gq_option2" />

                            <RadioButton
                                android:id="@+id/gqR3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gq_option3" />

                            <EditText
                                android:id="@+id/customGenderText"
                                style="@style/EditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/gender_custom_hint"
                                android:inputType="text"
                                android:maxLength="30" />

                            <RadioButton
                                android:id="@+id/gqR4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gq_option4" />
                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/ageQuestion"
                            style="@style/SmallHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/age_question" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/age_st1" />

                            <EditText
                                android:id="@+id/ageEditField"
                                style="@style/EditText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/padding_element"
                                android:layout_marginRight="@dimen/padding_element"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="number"
                                android:maxLength="3" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/age_st2" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/countryQuestion"
                            style="@style/SmallHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/country_question" />

                        <EditText
                            android:id="@+id/countryTextField"
                            style="@style/EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/country_custom_hint"
                            android:inputType="textMultiLine|textCapSentences"
                            android:maxLength="50"
                            android:singleLine="false" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/employmentQuestion"
                            style="@style/SmallHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/employment_question_text" />

                        <RadioGroup
                            android:id="@+id/eqRadioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/eqR1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option1" />

                            <RadioButton
                                android:id="@+id/eqR2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option2" />

                            <RadioButton
                                android:id="@+id/eqR3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option3" />

                            <RadioButton
                                android:id="@+id/eqR4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option4" />

                            <RadioButton
                                android:id="@+id/eqR5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option5" />

                            <RadioButton
                                android:id="@+id/eqR6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option6" />

                            <RadioButton
                                android:id="@+id/eqR7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option7" />

                            <RadioButton
                                android:id="@+id/eqR8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option8" />

                            <RadioButton
                                android:id="@+id/eqR9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option9" />

                            <RadioButton
                                android:id="@+id/eqR10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option10" />

                            <EditText
                                android:id="@+id/employmentOtherField"
                                style="@style/EditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/empl_custom_hint"
                                android:inputType="textMultiLine|text"
                                android:maxLength="100"
                                android:text="" />

                            <RadioButton
                                android:id="@+id/eqR11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/eq_option11" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/internetQuestion"
                            style="@style/SmallHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/internet_question_text" />

                        <RadioGroup
                            android:id="@+id/iqRadioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/iqR1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/iq_option1" />

                            <RadioButton
                                android:id="@+id/iqR2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/iq_option2" />

                            <RadioButton
                                android:id="@+id/iqR3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/iq_option3" />

                            <RadioButton
                                android:id="@+id/iqR4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/iq_option4" />
                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/iotQuestion"
                            style="@style/SmallHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/iot_question_text" />

                        <RadioGroup
                            android:id="@+id/iotqRadioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/iotHeardButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yesno_yes" />

                            <RadioButton
                                android:id="@+id/iotNotheardButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yesno_no" />
                        </RadioGroup>

                        <EditText
                            android:id="@+id/howIotExplanation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="center"
                            android:hint="@string/how_iot_question_hint"
                            android:inputType="textMultiLine|textPersonName|text"
                            android:maxLength="255"
                            android:text=""
                            android:textColor="@color/accent_color"
                            android:visibility="invisible" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/nextQuestionSectionButton"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_iot_section_button_text" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
